# discopt

./: .gitignore  .pre-commit-config.yaml  .test_durations  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  ROADMAP.md  codecov.yml  pyproject.toml  tim.lst
.claude/: settings.json
crates/discopt-core/: Cargo.toml
crates/discopt-core/examples/: feral_update_cost.rs  mdk_ablation.rs  milp_bench.rs  par_bench.rs
crates/discopt-core/src/: amp.rs  expr.rs  lib.rs  nl_parser.rs  profile.rs
crates/discopt-core/tests/: fixture_st_miqp5_text.nl
crates/discopt-python/: Cargo.toml
crates/discopt-python/src/: batch.rs  bnb_bindings.rs  convex_bindings.rs  decomp_bindings.rs  expr_bindings.rs  lib.rs  lp_bindings.rs  nl_bindings.rs  ripopt_bindings.rs  spatial_bindings.rs
discopt_benchmarks/: README.md  SOLVERS.md  bench_engine.py  bench_milp_sparse.py  category_runner.py  dashboard.py  issue_331_node_ablation.md  pyproject.toml  report_html.py  run_benchmarks.py  run_category_benchmarks.py
discopt_benchmarks/baselines/: README.md
discopt_benchmarks/benchmarks/: _subprocess_worker.py  cutest_runner.py  gdplib_native.py  gdplib_runner.py  metrics.py  qcqp_scoreboard.py  runner.py  scaled_runner.py
discopt_benchmarks/benchmarks/problems/: __init__.py  base.py  decomposition_problems.py  global_opt.py  lp_problems.py  m1_regression.py  milp_problems.py  minlp_problems.py  minlptests_problems.py  miqp_problems.py  qcqp_problems.py  qp_problems.py
discopt_benchmarks/config/: baron_global50.txt  benchmarks.toml  cutest_suites.toml  instance_classes.toml
discopt_benchmarks/config/suites/: full.txt  medium.txt  small.txt
discopt_benchmarks/perf/: __init__.py  gate.py  measure.py  milp_node_efficiency.py  overhead_bench.py  panel.py
discopt_benchmarks/results/: cut1_cmir_oracle_injection_20260706T123733.json  cut1_cmir_oracle_injection_20260710T161545.json  cuts1_cmir_flag_onoff_nodes_20260710T162000.json  global_opt_full_2026-02-20T08-16-14.260217.json  global_opt_full_2026-02-20T08-16-14.260217.md  issue116_gp_minlp_graduation_panel_20260717.json  issue309_flags_graduation_panel_20260716.jsonl  issue764_c2_propagation_entry_20260719.txt  issue764_native_kernel_graduation_panel_20260719T155819Z.json  issue764_native_kernel_graduation_panel_20260719T155819Z.txt  issue764_native_kernel_graduation_panel_20260719T191450Z.json  issue764_native_kernel_graduation_panel_20260719T191450Z.txt  issue764_native_propagation_20260719.txt  issue764_root_lp_probe_tight_graduation_panel.json  issue764_tanksize_certified_20260719.txt  issue817_multistart_panel_20260721.jsonl  lp_full_2026-02-20T06-40-51.990717.json  lp_full_2026-02-20T06-40-51.990717.md  milp_full_2026-02-20T06-41-40.365890.json  milp_full_2026-02-20T06-41-40.365890.md  minlp_full_2026-02-20T06-41-52.262210.json  minlp_full_2026-02-20T06-41-52.262210.md  miqp_full_2026-02-20T06-41-49.513733.json  miqp_full_2026-02-20T06-41-49.513733.md  p3_0b_scip_rootbound_20260703T144721.json  p3_1b_default_path_aggregation_20260703T163611.json  p3_1c_cut_reachability_20260703T172431.json  p3_1c_cut_reachability_20260703T172700.json  p3_1c_cut_reachability_20260703T173712.json  p3_1c_cut_reachability_panel_20260703T173743.json  p3_1d_separator_attribution_20260703T180253.json  p3_cmir_aggregation_onoff_20260703T155324.json  p3_zerohalf_onoff_20260703T185323.json  p4_reprofile_structure_loss_20260703T210635.json  p4_xla_compiles_probe.json  qp_full_2026-02-20T06-41-24.012909.json  qp_full_2026-02-20T06-41-24.012909.md
discopt_benchmarks/results/issue280/: graduation_panel_2026-07-17.json  swap_reseed_panel_2026-07-17.json
discopt_benchmarks/results/issue282/: attribution_5s_60s_20260717.json  c0_cut_family_root_gain_20260718T144625.json  coef_tighten_stage1_panel_20260718T180239.json  heuristic_ab_60s_20260717.json  obbt_iterate_workstream_b_HOLD_verdict.json  root_lp_probe_ab_20260717T183044.json  root_lp_probe_ab_reconfirm_20260718T145517.json  root_lp_probe_graduation_panel_20260718T151309.json  root_lp_probe_graduation_panel_20260718T155055.json  scip_reference_20260717.json  stage0_ensemble_probe_20260718T204831.json  (+1 more)
discopt_benchmarks/scripts/: bqp673_zpolytope_falsification.py  check_cert_neutrality.py  coverage_map.py  cut1_cmir_oracle_injection.py  cuts1_cmir_flag_onoff_nodes.py  e0_export_lp.py  engine_perf_probe.py  ex1252_compounding_probe.py  ex1252_cutoff_obbt_falsification.py  ex1252_piecewise_lever_probe.py  ex1252_pump_recursion_probe.py  ex1252_stage2_branching_probe.py  ex1252_stage5_differential.py  federation_coverage_census.py  fetch_minlplib.py  g5_bchoco06_hole_probe.py  g5_heatexch_pole_children_probe.py  g6_bchoco06_conditioning_probe.py  gen_cert_baseline.py  gen_claim_baseline.py  generality_sweep.py  global_opt_baron_vs_discopt.py  global_opt_nl_solvers.py  gp_minlp_graduation_panel.py  graduation_gate.py  issue280_graduation_panel.py  issue280_swap_reseed_panel.py  issue282_c0_cut_family_root_gain.py  issue282_gap_attribution.py  issue282_heur_ab.py  issue282_probe_panel_violations.py  issue282_root_lp_probe_ab.py  issue282_root_lp_probe_graduation_panel.py  issue282_stage0_ensemble_probe.py  issue282_stage2_probe.py  issue671_rowfilter_graduation_panel.py  issue694_anytime_build_probe.py  issue694_synthetic_proxy.py  issue727_obbt_iterate_compare.py  issue727_obbt_iterate_graduation_panel.py  (+57 more)
discopt_benchmarks/tests/: conftest.py  test_category_runner.py  test_cert_instrumentation.py  test_cert_neutrality_regime.py  test_correctness.py  test_decomposition_problems.py  test_dual_bound_sense.py  test_ellipsoidal_regression.py  test_gdplib.py  test_gdplib_native.py  test_milp_node_efficiency.py  test_minlplib_scaled.py  test_nl_solvers_verdict.py  test_overhead_330.py  test_perf_gate.py  test_qcqp_scoreboard.py  test_setcover_lp_regression.py  test_soundness_harness.py  test_superposition_regression.py
discopt_benchmarks/utils/: baseline.py  cert_neutrality.py  history.py  minlplib_data.py  reporting.py  soundness.py
(+1641 files in other folders)
