[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "discopt"
version = "0.1.0"
description = "Hybrid MINLP solver combining Rust and JAX"
requires-python = ">=3.10"

[project.optional-dependencies]
cutest = ["pycutest>=1.8.0"]

[tool.maturin]
manifest-path = "crates/discopt-python/Cargo.toml"
python-source = "python"
module-name = "discopt._rust"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "discopt.modeling.core"
disable_error_code = ["arg-type", "union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "discopt._jax.dag_compiler"
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "discopt._jax.relaxation_compiler"
disable_error_code = ["misc", "attr-defined"]

[[tool.mypy.overrides]]
module = "discopt._jax.nlp_evaluator"
disable_error_code = ["misc", "no-any-return", "assignment"]

[[tool.mypy.overrides]]
module = "discopt.solvers.nlp_ipopt"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt._jax.nl_evaluator"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt.solver"
disable_error_code = "attr-defined"

[[tool.mypy.overrides]]
module = "discopt._jax.differentiable"
disable_error_code = ["misc", "index", "return-value", "no-redef", "no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "discopt._jax.obbt"
disable_error_code = ["assignment", "no-redef", "arg-type", "index"]

[[tool.mypy.overrides]]
module = "discopt._jax.primal_heuristics"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "discopt.interfaces.cutest"
disable_error_code = ["no-any-return", "attr-defined", "return-value", "assignment"]

[[tool.mypy.overrides]]
module = "discopt.benchmarks.runner"
disable_error_code = ["assignment"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
timeout = 300
markers = [
    "smoke: quick sanity tests",
    "slow: long-running tests",
    "gpu: requires GPU",
    "correctness: correctness validation tests",
    "cutest: requires pycutest and CUTEst installation",
]
