[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "discopt"
version = "0.6.1.dev0"
description = "Hybrid MINLP solver combining Rust and JAX"
requires-python = ">=3.10"
authors = [{name = "John Kitchin"}]
license = {text = "EPL-2.0"}
readme = "README.md"
keywords = ["optimization", "MINLP", "branch-and-bound", "nonlinear", "solver", "JAX"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "pounce-solver>=0.8",
]

[project.urls]
Homepage = "https://github.com/jkitchin/discopt"
Repository = "https://github.com/jkitchin/discopt"
Documentation = "https://github.com/jkitchin/discopt#readme"
Issues = "https://github.com/jkitchin/discopt/issues"

[project.optional-dependencies]
# POUNCE is now a core dependency (the default NLP/IPM engine); this extra is
# kept as a no-op alias for back-compat with `pip install discopt[pounce]`.
pounce = ["pounce-solver>=0.8"]
ipopt = ["cyipopt>=1.4"]
cutest = ["pycutest>=1.8.0"]
# GAMS solver link: the expert-level GAMS Python API (GMO/GEV). Ships with a
# GAMS system; also on PyPI. Required only to run discopt *as* a GAMS solver.
# Pin gamsapi to match your installed GAMS version. PyYAML is used by
# `discopt gams-register` to merge into an existing gamsconfig.yaml.
gams = ["gamsapi[core]>=45", "pyyaml>=6"]
llm = ["litellm>=1.0"]
# First-order conic solver for the strong-Shor SDP root bound (issue #661,
# `DISCOPT_SHOR_SDP_ROOT_BOUND`). Missing scs is a sound no-op.
sdp = ["scs>=3.2"]
nn = ["onnx>=1.14", "onnxruntime>=1.16"]
# Use discopt as a Pyomo solver: `SolverFactory("discopt")`. Pure-Python bridge
# that round-trips through a temporary AMPL .nl file. See docs/pyomo_solver.md.
pyomo = ["pyomo>=6.7"]
ml = ["scikit-learn>=1.0"]
xgboost = ["xgboost>=1.7"]
lightgbm = ["lightgbm>=4.0"]
gnn = ["equinox>=0.13.8", "optax>=0.1"]
learned = ["equinox>=0.13.8", "optax>=0.1"]
# Design-time symbolic envelope/relaxation derivation toolkit
# (discopt._jax.symbolic). SymPy is used to *derive*, *verify*, and
# *code-generate* JAX relaxation closures offline; it is never imported on the
# solver hot path. See docs/notebooks/symbolic_envelopes.ipynb.
sympy = ["sympy>=1.12"]
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "pytest-xdist",
    # Pin the lint/typecheck toolchain to the exact versions in
    # .pre-commit-config.yaml (the single source of truth CI also runs), so a
    # local `pip install -e .[dev]` cannot drift from CI.
    "ruff==0.14.6",
    "mypy==2.1.0",
    "pre-commit",
    "pyomo>=6.7",
    # NN-embedding readers are covered by test_nn_reader_fixes.py (T-N4.1 removed
    # onnx_reader.py from the coverage omit), so the ONNX toolchain must be present
    # for `pip install -e .[dev]` and CI to exercise it.
    "onnx>=1.14",
    "onnxruntime>=1.16",
]
all = ["discopt[pounce,ipopt,cutest,llm,gnn,nn,ml,sympy,pyomo]"]

[project.scripts]
discopt = "discopt.cli:main"
discopt-dev = "discopt.dev.cli:main"
discopt-gams = "discopt.gams.link:main"

# Convenience discovery hook for Pyomo. The reliable activation is
# `import discopt.pyomo` (or `discopt.pyomo.register()`), which registers the
# 'discopt' solver with Pyomo's SolverFactory.
[project.entry-points."pyomo.solvers"]
discopt = "discopt.pyomo.solver"

[tool.maturin]
manifest-path = "crates/discopt-python/Cargo.toml"
python-source = "python"
module-name = "discopt._rust"
features = ["pyo3/extension-module"]
include = [
    "LICENSE",
    "Cargo.toml",
    "Cargo.lock",
    "crates/**/*.rs",
    "crates/**/*.toml",
    "python/discopt/gams/data/*.gms",
    "python/discopt/gams/data/manifest.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["adversary/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "discopt.modeling.core"
disable_error_code = ["arg-type", "union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "discopt._jax.dag_compiler"
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "discopt._jax.relaxation_compiler"
disable_error_code = ["misc", "attr-defined"]

[[tool.mypy.overrides]]
module = "discopt._jax.nlp_evaluator"
disable_error_code = ["misc", "no-any-return", "assignment"]

[[tool.mypy.overrides]]
module = "discopt.solvers.nlp_ipopt"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt.solvers.nlp_pounce"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt._jax.nl_evaluator"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt._jax.pounce_layer"
disable_error_code = "no-any-return"

[[tool.mypy.overrides]]
module = "discopt.solver"
disable_error_code = "attr-defined"

[[tool.mypy.overrides]]
module = "discopt._jax.differentiable"
disable_error_code = ["misc", "index", "return-value", "no-redef", "no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "discopt._jax.obbt"
disable_error_code = ["assignment", "no-redef", "arg-type", "index"]

[[tool.mypy.overrides]]
module = "discopt._jax.primal_heuristics"
disable_error_code = ["no-any-return"]

# The convexity-certificate modules use numpy primitives extensively;
# ``np.nextafter`` and friends return ``Any`` when passed scalars,
# which pollutes strict typing without affecting runtime correctness.
# Soundness is guaranteed by the test suite, not the type checker.
[[tool.mypy.overrides]]
module = "discopt._jax.convexity.interval"
disable_error_code = [
    "no-any-return",
    "arg-type",
    "attr-defined",
    "call-overload",
    "return-value",
]

[[tool.mypy.overrides]]
module = "discopt._jax.convexity.interval_eval"
disable_error_code = [
    "no-any-return",
    "arg-type",
    "attr-defined",
    "call-overload",
    "union-attr",
    "return-value",
    "index",
    "operator",
]

[[tool.mypy.overrides]]
module = "discopt._jax.convexity.interval_ad"
disable_error_code = [
    "no-any-return",
    "arg-type",
    "attr-defined",
    "assignment",
    "call-overload",
    "return-value",
    "index",
    "operator",
]

[[tool.mypy.overrides]]
module = "discopt._jax.convexity.eigenvalue"
disable_error_code = ["arg-type", "assignment", "call-overload"]

[[tool.mypy.overrides]]
module = "discopt._jax.convexity.certificate"
disable_error_code = ["no-any-return", "arg-type", "call-overload"]

[[tool.mypy.overrides]]
module = "discopt.interfaces.cutest"
disable_error_code = ["no-any-return", "attr-defined", "return-value", "assignment"]

[[tool.mypy.overrides]]
module = "discopt.benchmarks.runner"
disable_error_code = ["assignment"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
timeout = 300
# Default run is fast-correctness-ish. Opt into the heavy sets explicitly:
#   pytest -m slow            # backend cross-product, mid-size instances
#   pytest -m correctness     # known-optima validation (lives alongside benchmarks)
#   pytest -m amp_benchmark   # AMP / Alpine / MINLPTests benchmark coverage
#   pytest -m cutest          # requires CUTEst install
#   pytest -m ''              # everything, ignoring this filter
addopts = "-m 'not slow and not correctness and not amp_benchmark and not cutest and not memory_heavy and not gpu'"
markers = [
    "unit: pure-logic tests; no solver, no JAX trace beyond cached; <0.1 s",
    "smoke: one solve per code path on a tiny instance; <1 s",
    "slow: long-running tests (backend cross-product, mid-size instances, ML training)",
    "integration: end-to-end multi-component workflows (DOE, discrimination, CUTEst)",
    "amp_benchmark: opt-in AMP Alpine, MINLPTests, or incidence benchmark coverage",
    "memory_heavy: tests that can compile or solve enough AMP/JAX work to require memory caps",
    "requires_cyipopt: requires the optional cyipopt/Ipopt solver stack",
    "requires_pounce: requires the optional POUNCE (pure-Rust Ipopt port) solver",
    "gpu: requires GPU",
    "relaxation: theorem-style property tests for relaxation rules (containment, tightening); fast",
    "correctness: known-optima validation tests; usually also `slow`",
    "pr_correctness: small known-optima subset run on every PR; <30 s total",
    "cutest: requires pycutest and CUTEst installation",
    "claim_boundary: relaxation claim-arbitration tests; run SERIALLY (-n0) so claimer collisions cannot be order-masked under pytest-xdist (issue #632)",
]

[tool.coverage.run]
source = ["discopt"]
branch = true
omit = [
    "python/discopt/solvers/sipopt.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
