[package]
name = "discopt-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core MINLP solver: B&B engine, expression IR, presolve"

[dependencies]
# feral: pure-Rust sparse linear algebra. Provides the unsymmetric LU basis
# engine (ftran/btran + product-form column updates) that backs the warm-started
# simplex node engine for MILP.
#
# Floor is 0.11.3 — do NOT downgrade below it. 0.11.3 is the first crates.io
# release carrying the issue-#89 fix (`u_above` reindex, O(m³)→O(m²) on many-row
# bases). Earlier 0.11.x (≤0.11.2) lack it: #341 used `feral = "0.11"`, picked up
# 0.11.2, and silently regressed set-covering from ~3s to a >30s timeout
# (sc2000/sc4000) — the LU refactor went quadratic→cubic in the row count,
# invisible on few-row knapsacks but catastrophic on 800–1500-row covering LPs.
# `test_setcover_lp_regression.py` guards against a re-downgrade.
feral = "0.11.3"
# rayon: data-parallel iterators. Used (behind the `parallel` feature) to solve
# the independent per-node LP relaxations of a B&B batch concurrently. Pinned to
# 1.10 to keep the crate's MSRV (1.75); 1.12+ requires rustc 1.80.
rayon = { version = "1.10", optional = true }
# libm: portable libm implementation. Provides erf() (and other special
# functions) absent from Rust's std f64, used to evaluate the Gauss error
# function in the expression IR. Pure-Rust, preserves clean-wheel builds.
libm = "0.2"

[features]
# Parallel node evaluation in the MILP B&B driver via rayon. On by default
# (benchmarks show ~3.7x on 4 cores with an identical, deterministic tree);
# build with `--no-default-features` for the reference serial path.
default = ["parallel"]
parallel = ["dep:rayon"]
