[package]
name = "discopt-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core MINLP solver: B&B engine, expression IR, presolve"

[dependencies]
# feral: pure-Rust sparse linear algebra. Provides the unsymmetric LU basis
# engine (ftran/btran + product-form column updates) that backs the warm-started
# simplex node engine for MILP.
#
# Floor is 0.11.3 — do NOT downgrade below it. 0.11.3 is the first crates.io
# release carrying the issue-#89 fix (`u_above` reindex, O(m³)→O(m²) on many-row
# bases). Earlier 0.11.x (≤0.11.2) lack it: #341 used `feral = "0.11"`, picked up
# 0.11.2, and silently regressed set-covering from ~3s to a >30s timeout
# (sc2000/sc4000) — the LU refactor went quadratic→cubic in the row count,
# invisible on few-row knapsacks but catastrophic on 800–1500-row covering LPs.
# `test_setcover_lp_regression.py` guards against a re-downgrade.
#
# 0.12.0 was the first crates.io release carrying the discopt#364 LU-hardening APIs
# (feral #93/#94/#95) the numeric-focus simplex consumes: the element-growth
# getters (growth()/u_max0()), the unsymmetric-LU condition estimate
# (condition_estimate_1), and the richer update() instability signal
# (RefactorCause + last_refactor() + growth-aware/dense-parity should_refactor).
#
# Pinned to a git rev PAST the v0.13.0 release (2026-07-02) for feral #112 / PR #113
# (merge commit 660224dc9299): the sparse Forrest–Tomlin bump update now accumulates
# its working row with an always-on Neumaier (Kahan–Babuška) compensated sum, which
# keeps the sparse LU factor accurate on the wide dense-McCormick node bases.
#
# WHY THIS IS BUNDLED WITH THE #557 density-aware LU route (linsolve.rs): the route
# sends the m∈(16,256] sparse-but-wide McCormick bases to feral's SPARSE LU instead
# of the dense O(m³) path. On plain feral 0.12 that eliminates the RefacFtTinyPivot
# refactor storm (storm-elimination IS feral-independent, 42337→~3200 on st_e36) —
# BUT the plain-0.12 sparse factor is not accurate enough for the dual bound to keep
# closing: st_e36 with the route ON drops optimal→feasible, its bound stuck at the
# root value −304.5 (vs −246.02 that certifies optimal). #112's compensated sparse
# accumulation restores the bound-closing, so route ON stays `optimal`. Bound-closing
# is NOT feral-independent, hence the route change and this bump ship together.
# No discopt API change (LuParams gains `update_pivot_search: bool`, default false,
# covered by `..LuParams::default()`). Unreleased on crates.io as of the pin date,
# hence the git rev; bump to the next tagged release when it cuts.
feral = { git = "https://github.com/jkitchin/feral", rev = "660224dc929953072582603a15c7cb4c7bf0592c" }
# rayon: data-parallel iterators. Used (behind the `parallel` feature) to solve
# the independent per-node LP relaxations of a B&B batch concurrently. Pinned to
# 1.10 to keep the crate's MSRV (1.75); 1.12+ requires rustc 1.80.
rayon = { version = "1.10", optional = true }
# libm: portable libm implementation. Provides erf() (and other special
# functions) absent from Rust's std f64, used to evaluate the Gauss error
# function in the expression IR. Pure-Rust, preserves clean-wheel builds.
libm = "0.2"

[features]
# Parallel node evaluation in the MILP B&B driver via rayon. On by default
# (benchmarks show ~3.7x on 4 cores with an identical, deterministic tree);
# build with `--no-default-features` for the reference serial path.
default = ["parallel"]
parallel = ["dep:rayon"]
