[package]
name = "discopt-python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PyO3 bindings for discopt"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
discopt-core = { path = "../discopt-core" }
ripopt.workspace = true
pyo3.workspace = true
numpy.workspace = true
