[package]
name = "discopt-python"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PyO3 bindings for discopt"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
discopt-core = { path = "../discopt-core" }
pyo3.workspace = true
numpy.workspace = true

[features]
# Build the extension with the core's rayon-parallel MILP B&B node loop. Off by
# default; enable via `maturin build --features parallel` once validated.
parallel = ["discopt-core/parallel"]
